# libsuckterm

./: .gitignore  CMakeLists.txt  Makefile  arg.h  config.def.h  config.mk  helpers.c  helpers.h  libsuckterm.h  pty.c  ptyutils.c  ptyutils.h  st.c  xcallback.c  xcallback.h  xdraw.c  xdraw.h  xevent.c  xevent.h  xgui.c  xinit.c  xinit.h
